[bdist_wheel]
universal = 1

[metadata]
name = fastapi_web_session
version = attr: fastapi_web_session.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = web sessions for FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/amenezes/fastapi-web-session
project_urls =
  Documentation = https://github.com/amenezes/fastapi-web-session
  Code = https://github.com/amenezes/fastapi-web-session
  Issue tracker = https://github.com/amenezes/fastapi-web-session/issues
  Changes = https://github.com/amenezes/fastapi-web-session/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Framework :: FastAPI
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Libraries
  Topic :: Internet :: WWW/HTTP :: Session
keywords = "FastAPI", "session", "Redis"

[options]
packages = find:
install_requires =
  fastapi >= 0.85.0
  redis == 4.3.4
python_requires = >= 3.8

[options.extras_require]
docs = mkdocs-material
all = mkdocs-material

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py

ignore = E501 # line too long
         D100 # missing docstring in public module
         D101 # missing docstring in public class
         D102 # missing docstring in public method
         D103 # missing docstring in public function
         D105 # missing docstring in magic method
         D107 # missing docstring in __init__
         W503 # line break before binary operator
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    ignore::pytest.PytestUnraisableExceptionWarning

[mypy]
platform=linux

files = fastapi_web_session
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True
